--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div>
         <h1><span id="number"></span> кликов</h1>
-        <button onclick="increaseNumber()"></button>
+        <button ontouchstart="increaseNumber()"></button>
     </div>
 
     <script>
